# license-exprs

./: .mailmap  .travis.yml  Cargo.toml  README.md
examples/: fetch.rs
fetch-license-list-from-spdx/: Cargo.toml
fetch-license-list-from-spdx/src/: main.rs
src/: lib.rs  spdx.rs
tests/: validate_license_expr.rs
