[package]
name = "license-exprs"
version = "1.3.0"
authors = ["Without Boats <woboats@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Validate SPDX 2.1 license expressions."
repository = "https://github.com/withoutboats/license-exprs"

[[example]]
name = "fetch-license-list-from-spdx"
path = "examples/fetch.rs"

[dev-dependencies]
hyper = "0.11"
tokio-core = "0.1"
futures = "0.1"
hyper-tls = "0.1"
native-tls = "0.1"
serde_json = "1"
error-chain = "0.11"
